compiler/testData/diagnostics/tests/ProcessingEmptyImport.kt
// FIR_IDENTICAL
import<!SYNTAX!><!>

fun firstFun() {}